ontol/ontol-compiler/test-cases/error/parser/def3.on
def @hello world() // ERROR TODO: invalid def modifier
